# pupnp

./: CMakeLists.txt  build_upnp.bat
ixml/: CMakeLists.txt
ixml/inc/: ixmldebug.h
ixml/src/: document.c  element.c  ixml.c  ixmldebug.c  ixmlparser.c
lib/openssl/lib/: dasync.lib  libcrypto.lib  libssl.lib  ossltest.lib
lib/openssl/lib/engines-1_1/: capi.lib  padlock.lib
lib/pthread-win32/: CMakeLists.txt  build_pthread.bat
lib/pthread-win32/src/: pthread.h  pthread.sln
upnp/: CMakeLists.txt
upnp/inc/: upnpdebug.h
upnp/sample/common/: sample_util.c  sample_util.h  tv_config.h  tv_ctrlpt.c  tv_ctrlpt.h  tv_device.c  tv_device.h
upnp/sample/linux/: tv_combo_main.c  tv_ctrlpt_main.c  tv_device_main.c
upnp/sample/web/: du_default.xml
upnp/src/api/: upnpapi.c  upnpdebug.c
upnp/src/gena/: gena_callback2.c  gena_ctrlpt.c  gena_device.c
upnp/src/genlib/miniserver/: miniserver.c
upnp/src/genlib/net/: sock.c
upnp/src/genlib/net/http/: httpparser.c  httpreadwrite.c  webserver.c
upnp/src/genlib/net/uri/: uri.c
upnp/src/genlib/service_table/: service_table.c
upnp/src/inc/: autoconfig.h  gena.h  upnpapi.h
upnp/src/soap/: soap_ctrlpt.c  soap_device.c
upnp/src/ssdp/: ssdp_ResultData.c  ssdp_ctrlpt.c  ssdp_device.c  ssdp_server.c
upnp/src/threadutil/: ThreadPool.c
upnp/src/urlconfig/: urlconfig.c
